# pulseai

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile.ai  Dockerfile.dashboard  README.md  docker-compose.yml  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: cd.yml  ci.yml  release.yml  security.yml
agent/: .agent_state.json  .dockerignore  Cargo.toml  Dockerfile  README.md
agent/src/: collector.rs  environment.rs  gap_detector.rs  main.rs  state_manager.rs
ai/: README.md  consumer.py  drift_detector.py  explainer.py  features.py  inference.py  metrics.py  model.py  trainer.py
alerts/: .dockerignore  Dockerfile  README.md  alerter.go  go.mod  main.go
baseline/: README.md  baseline_manager.py  drift_classifier.py
config/: prometheus.yml  settings.toml
config/grafana/provisioning/dashboards/: pulseai.yml  pulseai_dashboard.json
correlation/: .dockerignore  Dockerfile  README.md  correlator.go  go.mod  main.go
dashboard/: README.md  auth.py  broadcast.py  main.py  routes.py
dashboard/static/: index.html  script.js  styles.css
docs/: TECHNICAL_DEV_GUIDE.md
feedback/: README.md  handler.py
ingestion/: .dockerignore  Dockerfile  README.md  dedup.go  go.mod  main.go  metrics.go  routes.go  schemas.go
scripts/: docker-clean.sh
storage/: README.md  cache.py  db.py  logging_config.py  models.py
test-utils/: README.md  cpu_spike.py  dashboard_auth_report_smoke.py
