[project]
name = "projectsys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "numpy>=2.4.4",
    "pandas>=3.0.1",
    "redis>=7.4.0",
    "river>=0.19.0",
    "scikit-learn>=1.8.0",
    "shap>=0.51.0",
    "sse-starlette>=3.3.4",
    "uvicorn>=0.42.0",
]
