[project]
name = "projectsys"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.135.2",
    "httpx>=0.28.1",
    "numpy>=2.4.4",
    "pandas>=2.1,<3.0.0",
    "passlib>=1.7.4",
    "prometheus-client>=0.21.0",
    "python-jose[cryptography]>=3.5.0",
    "pydantic>=2.0.0",
    "redis>=7.4.0",
    "river>=0.22.0",
    "scikit-learn>=1.8.0",
    "shap>=0.51.0",
    "sse-starlette>=3.3.4",
    "uvicorn>=0.42.0",
]
