[package]
name = "agent"
version = "0.1.0"
edition = "2021"

[dependencies]
sysinfo = "0.30.5"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.115"
reqwest = { version = "0.12.2", default-features = false, features = ["json", "rustls-tls"] }
